--- a/xiao_ble_sense_firmware/.vscode/settings.json
+++ b/xiao_ble_sense_firmware/.vscode/settings.json
@@ -1,6 +1,29 @@
 {
     "files.associations": {
         "string": "cpp",
-        "lsm6ds3.h": "c"
+        "freertos.h": "c",
+        "*.ipp": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "memory": "cpp",
+        "random": "cpp",
+        "initializer_list": "cpp",
+        "mutex": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "system_error": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "variant": "cpp",
+        "cmath": "cpp"
     }
 }
