--- a/xiao_ble_sense_firmware/.vscode/settings.json
+++ b/xiao_ble_sense_firmware/.vscode/settings.json
@@ -24,6 +24,7 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "variant": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "future": "cpp"
     }
 }
