--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,6 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
-./vscode/c_cpp_properties.json
+vscode/c_cpp_properties.json
+
+scripts/config.json
