feat: test buttonGroup class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.default.compilerPath": "",
-    "CodeGPT.apiKey": "OpenAI"
+    "CodeGPT.apiKey": "OpenAI",
+    "files.associations": {
+        "rtos.h": "c"
+    }
 }
