--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "type": "shell",
             "command": "python",
             "args": [
-                "${workspaceFolder}/scripts/dev_tools.py",
+                "${workspaceFolder}/PDL_Dev_Tools/dev_tools.py",
                 "create_new_library",
                 "\"${input:libraryName}\""
             ],
@@ -25,7 +25,7 @@
             "type": "shell",
             "command": "python",
             "args": [
-                "${workspaceFolder}/scripts/dev_tools.py",
+                "${workspaceFolder}/PDL_Dev_Tools/dev_tools.py",
                 "config",
                 "name",
                 "\"${input:configName}\""
@@ -37,7 +37,7 @@
             "type": "shell",
             "command": "python",
             "args": [
-                "${workspaceFolder}/scripts/dev_tools.py",
+                "${workspaceFolder}/PDL_Dev_Tools/dev_tools.py",
                 "config",
                 "email",
                 "\"${input:configEmail}\""
@@ -49,10 +49,34 @@
             "type": "shell",
             "command": "python",
             "args": [
-                "${workspaceFolder}/scripts/dev_tools.py",
+                "${workspaceFolder}/PDL_Dev_Tools/dev_tools.py",
                 "config",
                 "lib_path",
                 "\"${input:configLibPath}\""
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Config GitHub Token",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "${workspaceFolder}/PDL_Dev_Tools/dev_tools.py",
+                "config",
+                "github_token",
+                "\"${input:configGitHubToken}\""
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Config GitHub Org",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "${workspaceFolder}/PDL_Dev_Tools/dev_tools.py",
+                "config",
+                "github_org",
+                "\"${input:configGitHubOrg}\""
             ],
             "problemMatcher": []
         }
@@ -77,6 +101,16 @@
             "id": "configLibPath",
             "type": "promptString",
             "description": "Enter the new library path:"
+        },
+        {
+            "id": "configGitHubToken",
+            "type": "promptString",
+            "description": "Enter the GitHub token:"
+        },
+        {
+            "id": "configGitHubOrg",
+            "type": "promptString",
+            "description": "Enter the GitHub organization name:"
         }
     ]
 }
