--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -79,6 +79,20 @@
                 "\"${input:configGitHubOrg}\""
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "Init and Update Submodules",
+            "type": "shell",
+            "command": "bash",
+            "args": [
+                "-c",
+                "git submodule init && git submodule update --init --recursive"
+            ],
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            }
         }
     ],
     "inputs": [
