--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "libraries/Adafruit_NeoPixel"]
 	path = libraries/Adafruit_NeoPixel
 	url = https://github.com/adafruit/Adafruit_NeoPixel.git
+[submodule "libraries/PDL_Addressable_LED"]
+	path = libraries/PDL_Addressable_LED
+	url = https://github.com/Product-Design-Lab/PDL_Addressable_LED.git
